<resources>
    <!-- Common -->
    <string name="common_app_name">@string/app_name</string>
    <string name="app_name">Fjobs</string>
    <string name="loading">@string/common_loading</string>
    <string name="common_loading">loading…</string>
    <string name="waiting">loading…</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="alert">Warning</string>
    <string name="msg_common_password_is_incorrect">E-mail address or password is wrong.</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_birthday">Birth day</string>
    <string name="common_gender">Gender</string>
    <string name="common_man">Male</string>
    <string name="common_woman">Female</string>
    <string name="type_user">Type User</string>
    <string name="common_candidate">Candidate</string>
    <string name="common_recruiter">Recruiter</string>
    <string name="common_image_des">Image description</string>
    <string name="message_end_app">Quit the application?</string>

    <!-- Screen SignUp -->
    <string name="signup_sign_up">Start right away（Free）</string>
    <string name="signup_facebook">Login With Facebook</string>
    <string name="signup_google">Login \n With Google</string>
    <string name="signup_facebook_description">There will be no public availability on Facebook or Google</string>
    <string name="signup_log_in">Login</string>

    <!-- Action bar-->
    <string name="image_description">Image</string>

    <!-- Login Activity -->
    <string name="login">Login</string>
    <string name="common_email_address">Email Address</string>
    <string name="common_password">Password</string>
    <string name="login_login_button">Login</string>
    <string name="login_failed_dialog_title">Can not log in</string>
    <string name="login_forgot"><u>Did you forget your password?</u></string>
    <string name="email_is_empty">Please enter your email</string>
    <string name="email_invalid_format">Invalid email address format</string>
    <string name="email_length_must_than">Mail length must be within %1$s characters!</string>
    <string name="password_length_must_than">The length of the password is from %1$s to %2$s!</string>

    <!-- Register Activity -->
    <string name="title_register">Account Registration</string>
    <string name="btn_register">I agree and register</string>
    <string name="btn_user_agreement"><u>Terms of service</u></string>
    <string name="btn_privacy_policy"><u>Privacy policy</u></string>
    <string name="creating_account_please_wait">You have to create an account. Please wait…</string>
    <string name="profile_reg_name">Nickname</string>
    <string name="profile_reg_email">Email</string>
    <string name="profile_reg_pass">Password</string>
    <string name="profile_reg_confirm_pass">Confirm pass</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="common_enter_name">Enter name</string>
    <string name="email_hint_first">Mail address</string>
    <string name="first_password_hint">Password</string>
    <string name="btn_register_send_code">Register</string>
    <string name="verify_code_empty">Please enter authentication code</string>
    <string name="register_fail">Register fail!</string>
    <string name="email_exists">Email is exists!</string>

    <!-- Profile -->
    <string name="setup_profile">Profile Setting</string>
    <string name="birthday_value_is_invalid">Invalid birthday value.</string>
    <string name="gender_is_invalid">Gender is blank.</string>
    <string name="user_name_is_invalid">Please input name</string>
    <string name="email_is_empty_message">please input email</string>
    <string name="password_is_empty_message">please in put pass</string>
    <string name="password_out_of_range">pass word length is from 6 to 12</string>
    <string name="retype_password_is_not_the_same">pass word and confirm pass not same</string>

    <!-- Send code activity -->
    <string name="title_send_code">Authentication code</string>
    <string name="type_verify_code">Code</string>
    <string name="enter_code_hint">Enter here</string>

    <!-- Menu left -->
    <string name="near_work">Near work</string>

    <string name="trouble_notification">Problem</string>
    <!-- Item top -->
    <string name="name_company">Company Name</string>
    <string name="des_company">Company Descriptions</string>
    <string name="text_view">32 Lượt xem</string>
    <string name="text_work">Summary</string>
    <string name="text_des_work">CAE (Computer Aid Engineering) is a technology concerned with the use of computer systems to analyze CAD geometry, allowing designers to simulate and study how the product will behave so that the design can be validated, refined and, optimized. </string>
    <string name="text_position">Cách bạn 10km</string>
    <string name="text_date">Ngày đăng tuyển: 17/07/2017</string>

    <!-- Item bottom -->
    <string name="work_profile">Work profile</string>
    <string name="share">Share</string>
</resources>
