<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_background"
    android:orientation="vertical">

    <include layout="@layout/actionbar_only_back" />

    <TableRow
        android:id="@+id/tbl_name"
        style="@style/marginLeftRight_editProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_height"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_indicator_name"
            style="@style/text_view_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_reg_name" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/edt_name"
                style="@style/edit_text_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_normal"
                android:gravity="left"
                android:hint="@string/common_enter_name"
                android:inputType="textNoSuggestions"
                android:maxLength="@integer/max_lenght_name"
                android:textColor="@color/primary" />
        </FrameLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border" />

    <TableRow
        android:id="@+id/new_email_layout"
        style="@style/marginLeftRight_editProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_height"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_email"
            style="@style/text_view_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_reg_email" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/edt_email"
                style="@style/edit_text_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_normal"
                android:gravity="left"
                android:hint="@string/email_hint_first"
                android:inputType="textNoSuggestions"
                android:maxLength="@integer/max_lenght_name"
                android:textColor="@color/primary" />
        </FrameLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border" />

    <TableRow
        android:id="@+id/new_password_layout"
        style="@style/marginLeftRight_editProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_height"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_pass"
            style="@style/text_view_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/profile_reg_pass" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/edt_new_password"
                style="@style/edit_text_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_normal"
                android:gravity="left"
                android:hint="@string/first_password_hint"
                android:inputType="textPassword"
                android:maxLength="@integer/max_lenght_name"
                android:textColor="@color/primary" />
        </FrameLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border" />

    <TableRow
        android:id="@+id/confirm_password_layout"
        style="@style/marginLeftRight_editProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_height"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_confirm_pass"
            style="@style/text_view_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_reg_confirm_pass" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/edt_confirm_password"
                style="@style/edit_text_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_normal"
                android:gravity="left"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:maxLength="@integer/max_lenght_name"
                android:textColor="@color/primary" />
        </FrameLayout>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border" />

    <LinearLayout
        android:id="@+id/tbr_birthday"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_height"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/space_normal"
        android:paddingRight="@dimen/space_normal">

        <TextView
            style="@style/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/common_birthday" />

        <TextView
            android:id="@+id/txt_birthday"
            style="@style/text_view_primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_arrow_next"
            android:gravity="end|center" />
    </LinearLayout>

    <View
        android:background="@color/border"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:id="@+id/tbr_gender"
        style="@style/list_bottom"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_height"
        android:paddingLeft="@dimen/space_normal"
        android:paddingRight="@dimen/space_normal">

        <TextView
            android:layout_gravity="center"
            style="@style/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_gender"/>

        <TextView
            android:id="@+id/txt_gender"
            style="@style/text_view_primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/ic_arrow_next"
            android:drawablePadding="10dp"
            android:gravity="end|center"/>
    </LinearLayout>

    <View
        android:background="@color/border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/space_extreme_large"/>

    <Button
        android:id="@+id/btn_register"
        style="@style/button_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/space_large"
        android:paddingBottom="@dimen/space_large"
        android:layout_marginLeft="@dimen/space_extra_x_large"
        android:layout_marginRight="@dimen/space_extra_x_large"
        android:text="@string/btn_register" />

    <TextView
        android:id="@+id/txt_term"
        style="@style/text_view_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_extreme_large"
        android:clickable="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/btn_user_agreement" />

    <TextView
        android:id="@+id/txt_policy"
        style="@style/text_view_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/btn_privacy_policy" />

</LinearLayout>