<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:orientation="vertical">

    <include layout="@layout/actionbar_only_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_height"
        android:layout_marginLeft="@dimen/space_normal"
        android:layout_marginRight="@dimen/space_normal" >

        <TextView
            style="@style/text_view_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:singleLine="true"
            android:maxLines="1"
            android:text="@string/type_verify_code" />

        <EditText
            android:id="@+id/input_verify_code"
            style="@style/edit_text_primary"
            android:layout_width="0dp"
            android:gravity="left|center_vertical"
            android:layout_gravity="center"
            android:hint="@string/enter_code_hint"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="number" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <include layout="@layout/view_line"/>

    <Button
        android:id="@+id/btn_send"
        style="@style/button_primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_smaller"
        android:layout_marginTop="@dimen/space_largest"
        android:layout_marginLeft="@dimen/space_extreme_large"
        android:layout_marginRight="@dimen/space_extreme_large"
        android:text="@string/btn_register_send_code" />

</LinearLayout>